--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,10 @@
 
 .container {
   margin: 0;
-  padding-top: 10vh;
+  padding: 0;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;
 }
 
 .logo {
